      supported.

      \item Reference class utilities will detect an attempt to modify
      methods or fields in a locked class definition (e.g., in a name
      space) and generate an error.

      \item The formula methods for \code{lines()}, \code{points()} and
      \code{text()} now work even if package \pkg{stats} is not on the
      search path.
    }
  }
}

\section{CHANGES IN R VERSION 2.13.1 patched}{
  \subsection{BUG FIXES}{
    \itemize{
     \item \code{fisher.test()} had a buglet: If arguments were
      factors with unused levels, levels were dropped and you'd get an
      error saying that there should be at least two levels,
      inconsistently with pre-tabulated data.  (Reported by Michael Fay).

      \item \code{package.skeleton()} will no longer dump S4 objects
      supplied directly, rather than in a code file.  These cannot be
      restored correctly from the dumped version.
      
      \item Build-time expressions in help files did not have access
      to functions in the package being built (with \command{R CMD build}).  
      
      \item Because \code{quote()} did not mark its result as being in
      use, modification of the result could in some circumstances
      modify the original call.
    }  
  }
}

\section{\Rlogo CHANGES IN R VERSION 2.13.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{iconv()} no longer translates \code{NA} strings as
      \code{"NA"}.

      \item \code{persp(box = TRUE)} now warns if the surface extends
      outside the box (since occlusion for the box and axes is computed
      assuming the box is a bounding box). (\PR{202}.)

      \item \code{RShowDoc()} can now display the licences shipped with
      \R, e.g. \code{RShowDoc("GPL-3")}.

      \item New wrapper function \code{showNonASCIIfile()} in package
      \pkg{tools}.

      \item \code{nobs()} now has a \code{"mle"} method in package
      \pkg{stats4}.
